--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,87 @@
-* {
-  box-sizing: border-box;
+@charset "UTF-8";
+*,
+::after,
+::before {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  border: none;
+  outline: none;
+}
+
+li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+@font-face {
+  font-display: swap;
+  font-family: yekan;
+  font-style: normal;
+  font-weight: 600;
+  src: url('/assets/fonts/yekan/eot/iran-yekan-web-bold.eot');
+  src: url('/assets/fonts/yekan/woff/iran-yekan-web-bold.woff') format('woff'),
+    url('/assets/fonts/yekan/ttf/iran-yekan-web-bold.ttf') format('truetype');
+}
+@font-face {
+  font-display: swap;
+  font-family: yekan;
+  font-style: normal;
+  font-weight: 300;
+  src: url('/assets/fonts/yekan/eot/iran-yekan-web-light.eot');
+  src: url('/assets/fonts/yekan/woff/iran-yekan-web-light.woff') format('woff'),
+    url('/assets/fonts/yekan/ttf/iran-yekan-web-light.ttf') format('truetype');
+}
+@font-face {
+  font-display: swap;
+  font-family: yekan;
+  font-style: normal;
+  font-weight: 400;
+  src: url('/assets/fonts/yekan/eot/iran-yekan-web-regular.eot');
+  src: url('/assets/fonts/yekan/woff/iran-yekan-web-regular.woff') format('woff'),
+    url('/assets/fonts/yekan/ttf/iran-yekan-web-regular.ttf') format('truetype');
+}
+
+html {
+  font-size: 0.625rem;
+
+  direction: rtl;
+  scroll-behavior: smooth;
+}
+
+@media (min-width: 768px) {
+  html {
+    font-size: 0.6875rem;
+  }
+}
+
+body {
+  font-family: yekan, Arial, sans-serif;
+  font-size: 1.6rem;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+}
+
+video {
+  height: 100%;
+  width: 100%;
+}
+
+main > section {
+  width: 100%;
+  max-width: 1230px;
+  margin: 0 auto;
 }
 
 p {
+  font-size: 2rem;
+  padding: 1rem;
   text-transform: capitalize;
   text-decoration: none;
 
@@ -16,5 +93,5 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #99f2bc;
+  background: linear-gradient(140deg, #76b6b9 0%, #1cc62d 100%);
 }
